fix: add gap to the qrcode group

--- a/components/Common/IphoneGroup.module.scss
+++ b/components/Common/IphoneGroup.module.scss
@@ -45,6 +45,7 @@
     margin-bottom: 1em;
 
     display: flex;
+    gap: 0.5em;
     align-items: flex-end;
     z-index: 2;
     font-size: 1em;
